# FastAPI

project/: .gitignore  requirements.txt
project/app/: main.py
project_p/: .gitignore  Dockerfile  pyproject.toml
